@@ -10,11 +10,11 @@ ecosystem.
 
 ## Choose a Format
 
-| Format                          | Use it when                                                                      | Module        | Guide                                                 |
-| ------------------------------- | -------------------------------------------------------------------------------- | ------------- | ----------------------------------------------------- |
-| **Binary Object Serialization** | You need compact object graphs in Java native mode or across supported languages | `fory-core`   | [Java guide](../docs/guide/java/)                     |
-| **Row Format**                  | You need zero-copy random access, partial reads, or Arrow integration            | `fory-format` | [Row-format guide](../docs/guide/java/row-format.md)  |
-| **Fory JSON**                   | You need high-throughput standard JSON for Java applications                     | `fory-json`   | [Fory JSON guide](../docs/guide/java/json-support.md) |
+| Format                          | Use it when                                                                      | Module        | Guide                                            |
+| ------------------------------- | -------------------------------------------------------------------------------- | ------------- | ------------------------------------------------ |
+| **Binary Object Serialization** | You need compact object graphs in Java native mode or across supported languages | `fory-core`   | [Java guide](../docs/object-serialization/java/) |
+| **Row Format**                  | You need zero-copy random access, partial reads, or Arrow integration            | `fory-format` | [Row-format guide](../docs/row-format/java.md)   |
+| **Fory JSON**                   | You need high-throughput standard JSON for Java applications                     | `fory-json`   | [Fory JSON guide](../docs/json/index.md)         |
 
 Keep all Fory modules in one application on the same version.
 
@@ -64,14 +64,14 @@ Keep all Fory modules in one application on the same version.
 
 ## Documentation
 
-| Topic                       | Description                                   | Source Doc Link                                                                | Website Doc Link                                                                              |
-| --------------------------- | --------------------------------------------- | ------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------- |
-| **Java Guide**              | Binary xlang and native mode usage            | [docs/guide/java](../docs/guide/java)                                          | [Java Guide](https://fory.apache.org/docs/guide/java/)                                        |
-| **Row Format**              | Random access and Arrow integration           | [row-format.md](../docs/guide/java/row-format.md)                              | [Row Format](https://fory.apache.org/docs/guide/java/row_format)                              |
-| **Fory JSON**               | JSON usage, object mapping, and configuration | [json-support.md](../docs/guide/java/json-support.md)                          | [Fory JSON](https://fory.apache.org/docs/guide/java/json_support)                             |
-| **GraalVM Native Image**    | Native image support                          | [graalvm-support.md](../docs/guide/java/graalvm-support.md)                    | [GraalVM Support](https://fory.apache.org/docs/guide/java/graalvm_support)                    |
-| **Java Serialization Spec** | Binary protocol specification                 | [java_serialization_spec.md](../docs/specification/java_serialization_spec.md) | [Java Serialization Spec](https://fory.apache.org/docs/specification/java_serialization_spec) |
-| **Java Benchmarks**         | Performance data and plots                    | [java/README.md](../docs/benchmarks/java/README.md)                            | [Java Benchmarks](https://fory.apache.org/docs/benchmarks/java)                               |
+| Topic                       | Description                                   | Source Doc Link                                                                         | Website Doc Link                                                                              |
+| --------------------------- | --------------------------------------------- | --------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- |
+| **Java Guide**              | Binary xlang and native mode usage            | [Java Object Serialization](../docs/object-serialization/java/index.md)                 | [Java Guide](https://fory.apache.org/docs/object-serialization/java/)                         |
+| **Row Format**              | Random access and Arrow integration           | [Java Row Format](../docs/row-format/java.md)                                           | [Row Format](https://fory.apache.org/docs/row-format/java)                                    |
+| **Fory JSON**               | JSON usage, object mapping, and configuration | [Fory JSON](../docs/json/index.md)                                                      | [Fory JSON](https://fory.apache.org/docs/json/)                                               |
+| **GraalVM Native Image**    | Native image support                          | [GraalVM Native Image](../docs/object-serialization/java/graalvm.md)                    | [GraalVM Support](https://fory.apache.org/docs/object-serialization/java/graalvm)             |
+| **Java Serialization Spec** | Binary protocol specification                 | [java_serialization_spec.md](../docs/specification/java_serialization_spec.md)          | [Java Serialization Spec](https://fory.apache.org/docs/specification/java_serialization_spec) |
+| **Java Benchmarks**         | Performance data and plots                    | [Java Native Benchmarks](../docs/benchmarks/object-serialization/native/java/README.md) | [Java Benchmarks](https://fory.apache.org/docs/benchmarks/object-serialization/native/java/)  |
 
 ## Modules
 
@@ -95,28 +95,28 @@ aligned. `fory-json` includes `fory-core` transitively.
 <dependency>
   <groupId>org.apache.fory</groupId>
   <artifactId>fory-core</artifactId>
-  <version>1.5.0</version>
+  <version>1.6.1</version>
 </dependency>
 
 <!-- Row format -->
 <dependency>
   <groupId>org.apache.fory</groupId>
   <artifactId>fory-format</artifactId>
-  <version>1.5.0</version>
+  <version>1.6.1</version>
 </dependency>
 
 <!-- JSON serialization -->
 <dependency>
   <groupId>org.apache.fory</groupId>
   <artifactId>fory-json</artifactId>
-  <version>1.5.0</version>
+  <version>1.6.1</version>
 </dependency>
 
 <!-- Optional: Serializers for Protobuf data -->
 <dependency>
   <groupId>org.apache.fory</groupId>
   <artifactId>fory-extensions</artifactId>
-  <version>1.5.0</version>
+  <version>1.6.1</version>
 </dependency>
 ```
 
@@ -125,20 +125,21 @@ aligned. `fory-json` includes `fory-core` transitively.
 ```gradle
 dependencies {
     // Binary object serialization
-    implementation 'org.apache.fory:fory-core:1.5.0'
+    implementation 'org.apache.fory:fory-core:1.6.1'
     // Row format
-    implementation 'org.apache.fory:fory-format:1.5.0'
+    implementation 'org.apache.fory:fory-format:1.6.1'
     // JSON serialization
-    implementation 'org.apache.fory:fory-json:1.5.0'
+    implementation 'org.apache.fory:fory-json:1.6.1'
     // Optional: Protobuf serializers and metadata compression
-    implementation 'org.apache.fory:fory-extensions:1.5.0'
+    implementation 'org.apache.fory:fory-extensions:1.6.1'
 }
 ```
 
 ### JDK25+
 
-On JDK25+, open `java.lang.invoke` to Fory. Use `ALL-UNNAMED` when Fory is on
-the classpath:
+On JDK25+, opening `java.lang.invoke` to Fory core is also recommended. It avoids the
+current-JDK Unsafe fallback and is required when Unsafe access is disabled or unavailable, including
+with `--sun-misc-unsafe-memory-access=deny`. Use `ALL-UNNAMED` when Fory is on the classpath:
 
 ```bash
 --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
@@ -287,7 +288,7 @@ Fory fory = Fory.builder()
   .build();
 ```
 
-See the [Java guide](../docs/guide/java/) for detailed configuration options.
+See the [Java guide](../docs/object-serialization/java/) for detailed configuration options.
 
 ### JDK Custom Serialization Semantics
 
@@ -418,7 +419,7 @@ public final class RowExample {
 }
 ```
 
-See the [Java row-format guide](../docs/guide/java/row-format.md) for nested
+See the [Java row-format guide](../docs/row-format/java.md) for nested
 structs, arrays, maps, partial deserialization, and Arrow integration.
 
 ## Fory JSON
@@ -466,15 +467,16 @@ public final class JsonExample {
 
 Fory JSON supports Java 8 and later on standard JDKs, GraalVM native images,
 and Android. Java records are supported on Java 17 and later. See the
-[Fory JSON guide](../docs/guide/java/json-support.md) for supported types,
+[Fory JSON guide](../docs/json/index.md) for supported types,
 annotations, custom codecs, security controls, and platform setup.
 
 ## GraalVM Native Image
 
 Fory supports GraalVM Native Image without application reflection configuration. Binary
-serialization generates serializers while the image is built; the Fory annotation processor
-generates type-owned execution companions for Fory JSON `@JsonType` models. Build your native image
-as follows:
+serialization generates serializers while the image is built. Fory JSON discovers reachable
+`@JsonType` and `@JsonMixin` models directly, without the annotation processor. Interpreted JSON
+codecs work by default; return configurations from a reachable `@ForyJsonProvider` to generate
+matching JSON codecs while the image is built. Build your native image as follows:
 
 ```bash
 # Generate serializers at build time
@@ -484,7 +486,7 @@ mvn package -Pnative
 ./target/my-app
 ```
 
-See [GraalVM Support](../docs/guide/java/graalvm-support.md) for details.
+See [GraalVM Support](../docs/object-serialization/java/graalvm.md) for details.
 
 ## Development
 
